--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
                                     </li>
                                 </ul>
                                 <a href="#footer" class="scroll-link">
-                                    <span class="text-scroll">scroll down</span>
+                                    <span class="text-scroll subtitle-white"
+                                        >scroll down</span
+                                    >
                                     <span class="btn-scroll">
                                         <svg
                                             class="icon-scroll"
@@ -145,7 +147,7 @@
                                 </svg>
                             </div>
                             <h3 class="header-three">Unsurpassed taste</h3>
-                            <p class="p-advantages">
+                            <p class="p-style">
                                 Crafted with the finest quality cocoa beans and
                                 a dedication to perfection, each bite is a
                                 decadent experience that simply cannot be
@@ -167,7 +169,7 @@
                                 </svg>
                             </div>
                             <h3 class="header-three">Affordable price</h3>
-                            <p class="p-advantages">
+                            <p class="p-style">
                                 Indulge in high-quality chocolate without
                                 breaking the bank with Simply Chocolate's
                                 selection of affordable treats. Enjoy
@@ -190,7 +192,7 @@
                                 </svg>
                             </div>
                             <h3 class="header-three">Own production</h3>
-                            <p class="p-advantages">
+                            <p class="p-style">
                                 We take pride in our own production process,
                                 ensuring that every step is carefully crafted to
                                 perfection. From selecting the finest
@@ -201,7 +203,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="components-section">
+            <section class="components-section section">
                 <div class="container components-container">
                     <h2 class="header-two">
                         IT ALL ADDS UP TO ONE EXCEPTIONAL
@@ -220,9 +222,7 @@
                                     width="214"
                                     height="160"
                                 />
-                                <p class="components-item-description">
-                                    MILK CHOCOLATE
-                                </p>
+                                <p class="p-style">MILK CHOCOLATE</p>
                             </div>
                             <div class="overley-box">
                                 <h3 class="header-three h-overley">
@@ -234,7 +234,7 @@
                                         the benefits
                                     </li>
                                 </ul>
-                                <p class="p-overley">
+                                <p class="p-overley p-style">
                                     Milk chocolate is a solid chocolate
                                     confectionery containing cocoa, sugar and
                                     milk. It is the most consumed type of
@@ -258,7 +258,7 @@
                                     width="220"
                                     height="160"
                                 />
-                                <p class="components-item-description">MILK</p>
+                                <p class="p-style">MILK</p>
                             </div>
                             <div class="overley-box">
                                 <h3 class="header-three h-overley">Milk</h3>
@@ -268,7 +268,7 @@
                                         the benefits
                                     </li>
                                 </ul>
-                                <p class="p-overley">
+                                <p class="p-overley p-style"">
                                     Milk is a white liquid food produced by the
                                     mammary glands of mammals. It is the primary
                                     source of nutrition for young mammals
@@ -292,7 +292,7 @@
                                     width="214"
                                     height="160"
                                 />
-                                <p class="components-item-description">NUTS</p>
+                                <p class="p-style">NUTS</p>
                             </div>
                             <div class="overley-box">
                                 <h3 class="header-three h-overley">Nuts</h3>
@@ -302,7 +302,7 @@
                                         the benefits
                                     </li>
                                 </ul>
-                                <p class="p-overley">
+                                <p class="p-overley p-style"">
                                     Almonds, pistachios, and walnuts are some
                                     types of nuts that contain healthy
                                     nutrients. When eaten as part of a
@@ -326,9 +326,7 @@
                                     width="214"
                                     height="160"
                                 />
-                                <p class="components-item-description">
-                                    SEMI - SWEET CHOCOLATE
-                                </p>
+                                <p class="p-style">SEMI - SWEET CHOCOLATE</p>
                             </div>
                             <div class="overley-box">
                                 <h3 class="header-three h-overley">
@@ -342,7 +340,7 @@
                                         the benefits
                                     </li>
                                 </ul>
-                                <p class="p-overley">
+                                <p class="p-overley p-style"">
                                     Semi-sweet chocolate has a cocoa solid
                                     content of 35 to 65%. One of the best ways
                                     to gain an understanding of this type of
@@ -364,7 +362,7 @@
                                     width="214"
                                     height="160"
                                 />
-                                <p class="components-item-description">CACAO</p>
+                                <p class="p-style">CACAO</p>
                             </div>
                             <div class="overley-box">
                                 <h3 class="header-three h-overley">Cacao</h3>
@@ -374,7 +372,7 @@
                                         the benefits
                                     </li>
                                 </ul>
-                                <p class="p-overley">
+                                <p class="p-overley p-style"">
                                     Cocoa is a natural product obtained from the
                                     fruits of the cocoa tree (Theobroma cacao).
                                     This tropical fruit contains beans, from
@@ -399,9 +397,7 @@
                                     width="214"
                                     height="160"
                                 />
-                                <p class="components-item-description">
-                                    RASPBERRY
-                                </p>
+                                <p class="p-style">RASPBERRY</p>
                             </div>
                             <div class="overley-box">
                                 <h3 class="header-three h-overley">
@@ -413,7 +409,7 @@
                                         the benefits
                                     </li>
                                 </ul>
-                                <p class="p-overley">
+                                <p class="p-overley p-style"">
                                     Raspberry is a tasty and aromatic berry
                                     plant that is popular all over the world. It
                                     belongs to the pink family and grows in many
@@ -436,9 +432,7 @@
                                     width="214"
                                     height="160"
                                 />
-                                <p class="components-item-description">
-                                    COCONUT OIL
-                                </p>
+                                <p class="p-style">COCONUT OIL</p>
                             </div>
                             <div class="overley-box">
                                 <h3 class="header-three h-overley">
@@ -450,7 +444,7 @@
                                         the benefits
                                     </li>
                                 </ul>
-                                <p class="p-overley">
+                                <p class="p-overley p-style"">
                                     Coconut oil is a vegetable oil obtained from
                                     the pulp of the fruit of the coconut palm
                                     (Cocos nucifera). It is widely used in
@@ -465,7 +459,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="how-made-section" id="how-its-made">
+            <section class="how-made-section section" id="how-its-made">
                 <div class="container how-made-container">
                     <h2 class="header-two">
                         hOW IT`S <span class="header-accent">made?</span>
@@ -521,7 +515,7 @@
                     </div>
                 </div>
             </section>
-            <section class="our-product-section">
+            <section class="our-product-section section">
                 <div class="container our-product-container">
                     <h2 class="header-two">
                         Our <span class="header-accent">products</span>
@@ -642,7 +636,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="top-sellers-section">
+            <section class="top-sellers-section section">
                 <div class="container top-sellers-container">
                     <h2 class="header-two">
                         <span class="header-accent">TOP</span> SELLERS
@@ -656,7 +650,7 @@
                                     class="image-top-sellers"
                                 />
                                 <div class="overley-top-sellers-box">
-                                    <p class="overley-top-sellers-text">
+                                    <p class="p-style">
                                         Chocolate with nuts is a delectable
                                         combination that brings together the
                                         smoothness of chocolate and the
@@ -682,7 +676,7 @@
                                     class="image-top-sellers"
                                 />
                                 <div class="overley-top-sellers-box">
-                                    <p class="overley-top-sellers-text">
+                                    <p class="p-style">
                                         Chocolate with fruit is an unbeatable
                                         combination of two of the tastiest
                                         things in the world. This dessert
@@ -706,7 +700,7 @@
                                     class="image-top-sellers"
                                 />
                                 <div class="overley-top-sellers-box">
-                                    <p class="overley-top-sellers-text">
+                                    <p class="p-style">
                                         Dark chocolate is a rich and indulgent
                                         treat that is beloved by many chocolate
                                         enthusiasts. It is made from cocoa
@@ -727,7 +721,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="reviews-section" id="reviews">
+            <section class="reviews-section section" id="reviews">
                 <div class="container reviews-container">
                     <h2 class="header-two h-two-reviews">
                         <span class="header-accent">CHOCOLATE</span> IS LOVED
@@ -744,7 +738,7 @@
                             <h3 class="header-three h-reviews">
                                 Victoria Dobrzhanska
                             </h3>
-                            <p class="p-review">
+                            <p class="p-review p-style">
                                 I love this chocolate bar. Perfect combination
                                 of light crispy wafer, covered in a thin layer
                                 chocolate.
@@ -761,7 +755,7 @@
                             <h3 class="header-three h-reviews">
                                 Nazar Babenko
                             </h3>
-                            <p class="p-review">
+                            <p class="p-review p-style">
                                 This chocolate confection is a delight! A
                                 delight! The wafer is light and crisp, the
                                 hazelnut cream is smooth, and the chocolate is
@@ -779,7 +773,7 @@
                             <h3 class="header-three h-reviews">
                                 Olena Kampusch
                             </h3>
-                            <p class="p-review">
+                            <p class="p-review p-style">
                                 Chocolate is a family favourite treat. Love the
                                 delicious smooth chocolate and the creaminess
                                 inside. The wafer is soft but crunchy.
@@ -801,7 +795,7 @@
                     </p>
                     <ul class="footer-top-list">
                         <li class="footer-top-item">
-                            <p class="p-footer">Social networks</p>
+                            <p class="subtitle-white">Social networks</p>
                             <ul class="social-list">
                                 <li class="social-item">
                                     <a href="" class="social-item-link">
@@ -845,20 +839,20 @@
                             </ul>
                         </li>
                         <li class="footer-top-item">
-                            <p class="p-footer">Contact us</p>
+                            <p class="subtitle-white">Contact us</p>
                             <address class="contact">
                                 <ul class="contact-list">
                                     <li class="contact-item">
                                         <a
                                             href="tel:+380684439426"
-                                            class="contact-item-link"
+                                            class="contact-item-link p-style"
                                             >+380 (68) 443-94-26</a
                                         >
                                     </li>
                                     <li class="contact-item">
                                         <a
                                             href="mailto:simplychoc@gmail.com"
-                                            class="contact-item-link"
+                                            class="contact-item-link p-style"
                                             >simplychoc@gmail.com</a
                                         >
                                     </li>
